[gd_scene load_steps=7 format=3 uid="uid://0lg2y3lesi21"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_8rbrv"]
[ext_resource type="Texture2D" uid="uid://dsg6ywks28gpf" path="res://Enemy/slimeBlue.png" id="1_jw4e3"]
[ext_resource type="Texture2D" uid="uid://di5xujsosns5x" path="res://Enemy/slimeBlue_move.png" id="2_8k0qq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ty4la"]
radius = 32.0
height = 84.0

[sub_resource type="SpriteFrames" id="SpriteFrames_xgqew"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_jw4e3")
}, {
"duration": 1.0,
"texture": ExtResource("2_8k0qq")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t5arq"]
radius = 30.0
height = 60.0

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_8rbrv")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 35)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ty4la")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xgqew")
animation = &"walk"

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Timer2" type="Timer" parent="." groups=["enemy"]]
wait_time = 4.0
one_shot = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 35)
shape = SubResource("CapsuleShape2D_t5arq")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
